Edit manifest.common.json for an anti-CORS

--- a/manifest.common.json
+++ b/manifest.common.json
@@ -26,4 +26,15 @@
     "icons": {
         "48": "icons/EDP-Unblock-logo-dark.png"
     }
+    "permissions": [
+        "webRequest",
+        "webRequestBlocking",
+        "*://*/*"
+],
+ 	"background": {
+    	"service_worker": "background.js"
 }
+
+
+}
+
