--- a/manifest.chromium.json
+++ b/manifest.chromium.json
@@ -1,38 +1,10 @@
 {
-    "name": "Ecole Directe Plus Unblock",
-    "version": "0.1.8",
-    "description": "Permet le fonctionnement du site Ecole Directe Plus sur PC. Fait la passerelle entre votre ordinateur et l'API d'EcoleDirecte.",
-    "homepage_url": "https://ecole-directe.plus/login",
-
-    "content_scripts": [
-        {
-            "matches": [
-                "https://www.ecoledirecte.com/*"
-            ],
-            "js": [
-                "promoteEDP.js"
-            ]
-        },
-        {
-            "matches": [
-                "https://ecole-directe.plus/*"
-            ],
-            "js": [
-                "removeEDPUnblockBanner.js"
-            ]
-        }
-    ],
-
-    "icons": {
-        "48": "icons/EDP-Unblock-logo-dark.png"
-    },
-
+    "manifest_version": 3,
     "permissions": [
         "webRequest",
         "webRequestBlocking",
         "*://*/*"
     ],
-
     "background": {
         "service_worker": "background.js"
     }
